UpdatedAcquierForChatak